--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.16",
     "@tanstack/react-query": "^5.28.6",
     "apexcharts": "^3.48.0",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
