--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@mui/x-charts": "^7.3.2",
     "@mui/x-date-pickers": "^7.3.2",
+    "antd": "^5.17.0",
     "awesome-react-stepper": "^1.1.1",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
