--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "@mui/material": "^5.15.16",
     "@tanstack/react-query": "^5.28.6",
     "apexcharts": "^3.48.0",
+    "mui-one-time-password-input": "^2.0.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.6"
   },
