--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@mui/system": "^5.15.15",
     "@mui/x-date-pickers": "^7.3.2",
     "@ramonak/react-progress-bar": "^5.2.0",
     "@tanstack/react-query": "^5.34.2",
+    "antd": "^5.18.0",
     "apexcharts": "^3.49.0",
     "awesome-react-stepper": "^1.1.1",
     "axios": "^1.6.8",
@@ -29,7 +31,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-otp-input": "^3.1.1",
-    "react-router-dom": "^6.23.0",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.6",
     "victory": "^37.0.2"
